--- a/author/templates/author/partials/_socialnetwork.html
+++ b/author/templates/author/partials/_socialnetwork.html
@@ -1,5 +1,5 @@
 {% extends 'author/pages/dashboard.html' %}
 
 {% block settings %}
-    <p> configurações do site ...</p>
+    {% include 'author/partials/_baseform.html' %}
 {% endblock %}
