--- a/author/templates/author/partials/_gallery.html
+++ b/author/templates/author/partials/_gallery.html
@@ -1,5 +1,5 @@
 {% extends 'author/pages/dashboard.html' %}
 
 {% block settings %}
-    <p> galeria do site ...</p>
+    {{ form }}
 {% endblock %}
