feat: created the form for profile

--- a/author/templates/author/pages/dashboard.html
+++ b/author/templates/author/pages/dashboard.html
@@ -22,12 +22,12 @@
                                 </a>
                             </li>
                             <li class="C-settings__li">
-                                <a href="" class="C-settings__link">
+                                <a href="{% url 'author:sectionintro' %}" class="C-settings__link">
                                     intro
                                 </a>
                             </li>
                             <li class="C-settings__li">
-                                <a href="" class="C-settings__link">
+                                <a href="{% url 'author:profile' %}" class="C-settings__link">
                                     perfil profissional
                                 </a>
                             </li>
