--- a/base_static/global/css/style.css
+++ b/base_static/global/css/style.css
@@ -749,6 +749,17 @@ body::-webkit-scrollbar-thumb {
   border-color: var(--blue-3);
 }
 
+.C-login__message {
+  color: var(--light-white);
+}
+
+.C-login__message a {
+  text-decoration: none;
+  background-color: var(--blue-1);
+  padding: 3px 5px;
+  color: var(--standard-black);
+}
+
 .C-login__button {
   text-transform: capitalize;
   font-weight: 400;
@@ -798,7 +809,6 @@ body::-webkit-scrollbar-thumb {
 
 .C-settings {
   margin-left: 10px;
-  padding: 30px 0;
 }
 
 .C-settings__ul {
@@ -841,6 +851,26 @@ body::-webkit-scrollbar-thumb {
   outline: none;
   font-size: 16px;
   padding: 5px;
+}
+
+.C-form__div > textarea {
+  width: 100%;
+  max-width: 680px;
+  resize: none;
+  font-size: 16px;
+  padding: 5px;
+  font-weight: normal;
+  text-align: justify;
+}
+
+.C-form__div > input[type="checkbox"] {
+  text-align: left;
+  vertical-align: middle;
+  width: 12px;
+}
+
+.C-form__div > label[for="image-clear_id"] {
+  display: inline;
 }
 
 .C-form__button {
