feat: created the form for pre-gallery

--- a/author/templates/author/pages/dashboard.html
+++ b/author/templates/author/pages/dashboard.html
@@ -32,7 +32,7 @@
                                 </a>
                             </li>
                             <li class="C-settings__li">
-                                <a href="" class="C-settings__link">
+                                <a href="{% url 'author:initialgallery' %}" class="C-settings__link">
                                     galeria inicial
                                 </a>
                             </li>
