feat: created the form for services

--- a/author/templates/author/pages/dashboard.html
+++ b/author/templates/author/pages/dashboard.html
@@ -37,7 +37,7 @@
                                 </a>
                             </li>
                             <li class="C-settings__li">
-                                <a href="" class="C-settings__link">
+                                <a href="{% url 'author:services' %}" class="C-settings__link">
                                     serviços
                                 </a>
                             </li>
