--- a/author/templates/author/pages/dashboard.html
+++ b/author/templates/author/pages/dashboard.html
@@ -59,8 +59,7 @@
 
         <!-- settings and CRUD -->
         <section class="C-dashboard__settings">
-            {% block settings %}
-            {% endblock %}
+            {% block settings %}{% endblock %}
         </section>
     </section>
 {% endblock %}
