--- a/author/templates/author/partials/_all_services.html
+++ b/author/templates/author/partials/_all_services.html
@@ -7,10 +7,25 @@
                 <p class="C-services_view_title" href="">{{ service.title }}</p>
                 <p class="C-services_view_description"href="">{{ service.description }}</p>
                 <div class="C-services__actions">
-                    <a href="{% url 'author:service' service.id %}"><span class="material-symbols-outlined C-services_view__span">edit</span></a>
-                    <a href=""><span class="material-symbols-outlined C-services_view__span">delete</span></a>
+                    <a href="{% url 'author:service' service.id %}"><span class="material-symbols-outlined C-services_view__span C-services_view__edit">edit</span></a>
+                    <span class="C-services_view__span C-services__delete_form">
+                        <form
+                            action="{% url 'author:service_delete' service.id %}"
+                            method="POST"
+                            class="C-services_view_delete C-services_view__span">
+                            <button type="submit">
+                                {% csrf_token %}
+                                <span class="material-symbols-outlined C-services_view__span">delete</span>
+                            </button>
+                        </form>
+                    </span>
                 </div>
             </div>
         {% endfor %}
     </section>
+    <!-- messsages -->
+    <div style="margin-top: 30px;"></div>
+    <a href="{% url 'author:new_service' %}"><input class="C-form__button" type="button" value="Novo Serviço"></a>
+    <a class="C-form__button C-button_to_back" href="{{ button_to_back_action }}">voltar</a>
+    {% include 'global/partials/messages.html' %}
 {% endblock %}
