--- a/author/templates/author/partials/_baseform.html
+++ b/author/templates/author/partials/_baseform.html
@@ -47,7 +47,7 @@
         </div>
     {% endfor %}
     <button type="submit" class="C-form__button">salvar</button>
-    {% block extra_button %}{% endblock %}
+    <a class="C-form__button C-button_to_back" href="{{ button_to_back_action }}">voltar</a>
 </form>
 
 <!-- messages -->
