feat: created the form for adress

--- a/author/templates/author/pages/dashboard.html
+++ b/author/templates/author/pages/dashboard.html
@@ -42,7 +42,7 @@
                                 </a>
                             </li>
                             <li class="C-settings__li">
-                                <a href="" class="C-settings__link">
+                                <a href="{% url 'author:adress' %}" class="C-settings__link">
                                     endereço
                                 </a>
                             </li>
