--- a/author/templates/author/partials/_gallery.html
+++ b/author/templates/author/partials/_gallery.html
@@ -1,5 +1,20 @@
 {% extends 'author/pages/dashboard.html' %}
 
 {% block settings %}
-    {{ form }}
+    <section class="C-gallery-settings center_flex_row">
+        {% for image in images %}
+            <div class="C-gallery__div center_flex_column">
+                <h2 class="C-gallery__title">{{ image.title }}</h2>
+                <p class="C-gallery__description">{{ image.description }}</p>
+                <a href="{% url 'author:gallery_edit' image.id %}">
+                    <img class="C-gallery__image" src="{{ image.cover.url }}" alt="">
+                </a>
+            </div>
+        {% endfor %}
+    </section>
+    <!-- buttons -->
+    {% include 'author/partials/_buttons.html' %}
+    
+    <!-- messsages -->
+    {% include 'global/partials/messages.html' %}
 {% endblock %}
