--- a/author/templates/author/partials/_all_services.html
+++ b/author/templates/author/partials/_all_services.html
@@ -9,23 +9,12 @@
 
     <section class="C-services_view center_flex_row">
         {% for service in services %}
-            <div class="C-services_view_container">
+            <div class="C-services_view_container center_flex_column">
                 <p class="C-services_view_title" href="">{{ service.title }}</p>
                 <p class="C-services_view_description"href="">{{ service.description }}</p>
-                <div class="C-services__actions">
-                    <a href="{% url 'author:service' service.id %}"><span class="material-symbols-outlined C-services_view__span C-services_view__edit">edit</span></a>
-                    <span class="C-services_view__span C-services__delete_form">
-                        <form
-                            action="{% url 'author:service_delete' service.id %}"
-                            method="POST"
-                            class="C-services_view_delete C-services_view__span">
-                            <button type="submit">
-                                {% csrf_token %}
-                                <span class="material-symbols-outlined C-services_view__span">delete</span>
-                            </button>
-                        </form>
-                    </span>
-                </div>
+
+                <!-- buttons for edit and delete services -->
+                {% include 'author/partials/_buttons_actions_services.html' %}
             </div>
         {% endfor %}
     </section>
