--- a/author/templates/author/partials/_buttons.html
+++ b/author/templates/author/partials/_buttons.html
@@ -1,4 +1,5 @@
 <!-- buttons -->
-<div style="margin-top: 30px;"></div>
-<a href="{{ button_action }}"><input class="C-form__button" type="button" value="{{ button_name }}"></a>
-<a class="C-form__button C-button_to_back" href="{{ button_to_back_action }}">voltar</a>
+<div class="C-buttons center_flex_row">
+    <a class="C-form__button_a" href="{{ button_action }}"><input class="C-form__button" type="button" value="{{ button_name }}"></a>
+    <a class="C-form__button C-button_to_back" href="{{ button_to_back_action }}">voltar</a>
+</div>
