--- a/base_static/global/css/style.css
+++ b/base_static/global/css/style.css
@@ -328,6 +328,7 @@ body::-webkit-scrollbar-thumb {
   padding: 0 10px;
   padding-bottom: 10px;
   text-align: center;
+  overflow-wrap: break-word;
 }
 
 .C-intro__card_description {
@@ -558,7 +559,6 @@ body::-webkit-scrollbar-thumb {
 
 .C-contact__link {
   column-gap: 15px;
-  padding: 8px 15px;
   width: 100%;
   color: var(--standard-white);
   text-decoration: none;
@@ -570,20 +570,33 @@ body::-webkit-scrollbar-thumb {
   border-radius: 3px;
 }
 
-.C-contact__contact .C-contact__link:nth-of-type(1) {
+.C-contact__link:nth-of-type(1) {
   background-color: var(--blue-facebook);
 }
 
-.C-contact__contact .C-contact__link:nth-of-type(2) {
+.C-contact__link:nth-of-type(2) {
   background-image: linear-gradient(35deg, var(--orange-1-instagram), var(--orange-1-instagram), var(--orange-3-instagram), var(--orange-4-instagram));
 }
 
-.C-contact__contact .C-contact__link:nth-of-type(3) {
+.C-contact__link:nth-of-type(3) {
   background-image: linear-gradient(90deg, var(--green-1-whatsapp), var(--green-2-whatsapp));
 }
 
-.C-contact__contact > p {
+.C-contact__link a {
+  padding: 8px 15px;
+  background-color: transparent;
+  text-decoration: none;
+  font-size: 14px;
   color: var(--standard-white);
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  column-gap: 5px;
+  row-gap: 5px;
+}
+
+.C-contact__number {
+  color: var(--standard-white);
+  font-size: 14px;
 }
 
 .C-contact__localization {
@@ -1207,12 +1220,50 @@ body::-webkit-scrollbar-thumb {
 
 /* MEDIA QUERIES */
 @media screen and (max-width: 355px) {
-  .C-intro__card h2 {
+  .C-title__text {
+    font-size: 30px;
+  }
+
+  .C-intro__title {
+    font-size: 25px;
+  }
+
+  .C-intro__card_title {
     font-size: 14px;
   }
 
   .C-intro__card p {
     font-size: 12px;
+  }
+
+  .C-contact__link a {
+    font-size: 10px;
+  }
+ 
+  .C-contact__number {
+    color: var(--standard-white);
+    font-size: 12px;
+  }
+  
+  .C-contact__number {
+    font-size: 12px;
+  }
+
+  .C-contact__link img {
+    width: 23px;
+  }
+
+  .C-contact__contact > p {
+    font-size: 12px;
+  }
+
+  .C-services h2 {
+    font-size: 20px;
+    overflow-wrap: break-word;
+  }
+
+  .C-services__service h2 {
+    font-size: 20px;
   }
 
   .C-login__form {
@@ -1221,6 +1272,10 @@ body::-webkit-scrollbar-thumb {
 
   .C-login__div > input {
     max-width: 100%;
+  }
+
+  .C-footer__adress, .C-footer__copy {
+    font-size: 10px;
   }
 }
 
