--- a/base_template/global/partials/_menu.html
+++ b/base_template/global/partials/_menu.html
@@ -15,13 +15,13 @@
         </button>
         <nav class="C-menu__nav is_hidden">
             <ul class="C-menu__ul center_flex_column">
-                <li class="C-menu__li"><a href="/" class="C-menu__link standard_transition">{% translate 'home' %}</a></li>
-                <li class="C-menu__li"><a href="{% url 'home:home' %}#profile" class="C-menu__link standard_transition">{% translate 'about' %}</a></li>
-                <li class="C-menu__li"><a href="{% url 'home:home' %}#services" class="C-menu__link standard_transition">{% translate 'services' %}</a></li>
-                <li class="C-menu__li"><a href="{% url 'gallery:gallery' %}" class="C-menu__link standard_transition">{% translate 'gallery' %}</a></li>
-                <li class="C-menu__li"><a href="{% url 'home:home' %}#contact" class="C-menu__link standard_transition">{% translate 'contact' %}</a></li>
+                <li class="C-menu__li"><a href="/" class="C-menu__link standard_transition">home</a></li>
+                <li class="C-menu__li"><a href="{% url 'home:home' %}#profile" class="C-menu__link standard_transition">sobre</a></li>
+                <li class="C-menu__li"><a href="{% url 'home:home' %}#services" class="C-menu__link standard_transition">serviços</a></li>
+                <li class="C-menu__li"><a href="{% url 'gallery:gallery' %}" class="C-menu__link standard_transition">galeria</a></li>
+                <li class="C-menu__li"><a href="{% url 'home:home' %}#contact" class="C-menu__link standard_transition">contato</a></li>
                 {% if user.is_authenticated %}
-                    <li class="C-menu__li panel"><a href="{% url 'author:dashboard' %}" class="C-menu__link standard_transition">{% translate 'panel' %}</a></li>
+                    <li class="C-menu__li panel"><a href="{% url 'author:dashboard' %}" class="C-menu__link standard_transition">painel</a></li>
                 {% endif %}
             </ul>
         </nav>
