--- a/base_template/global/partials/_menu.html
+++ b/base_template/global/partials/_menu.html
@@ -11,7 +11,9 @@
     <!-- menu -->
     <div class="C-menu__menu">
         <button class="C-menu__button center_flex_row">
-            <span class="material-symbols-outlined C-menu__span">menu</span>
+            <span class="material-symbols-outlined C-menu__span">
+                menu_open
+            </span>
         </button>
         <nav class="C-menu__nav is_hidden">
             <ul class="C-menu__ul center_flex_column">
