style: changed de line-brek in C-form div a

--- a/base_static/global/css/style.css
+++ b/base_static/global/css/style.css
@@ -929,7 +929,7 @@ body::-webkit-scrollbar-thumb {
 
 .C-form__div > a {
   max-width: 75vw;
-  overflow-wrap: break-word;
+  line-break: anywhere;
 }
 
 .C-form__div > div > img {
