--- a/base_template/global/partials/_menu.html
+++ b/base_template/global/partials/_menu.html
@@ -11,7 +11,7 @@
     <!-- menu -->
     <div class="C-menu__menu">
         <button class="C-menu__button center_flex_row">
-            <span class="material-symbols-outlined C-menu__span">
+            <span class="material-symbols-outlined material-icons md-48 C-menu__span">
                 menu_open
             </span>
         </button>
