--- a/base_static/global/css/style.css
+++ b/base_static/global/css/style.css
@@ -37,7 +37,7 @@
 html, body {
   font-family: var(--font-montserrat);
   height: 100%;
-  scroll-behavior: smooth;
+  scroll-behavior: smooth !important;
 }
 
 body::-webkit-scrollbar {
